# summer_go1_AIML_2022

./: .gitignore  README.md  change_LED_blue_mqtt.py  change_LED_green_mqtt.py  change_LED_red_mqtt.py  example_change_LED_red_mqtt.py  turnoff_LED_mqtt.py
catkin_ws/devel/: .catkin
catkin_ws/devel/lib/greenball_tracking/: greenball_tracking
catkin_ws/devel/lib/pkgconfig/: greenball_tracking.pc
catkin_ws/devel/share/greenball_tracking/cmake/: greenball_trackingConfig.cmake
catkin_ws/src/greenball_tracking/: CMakeLists.txt  package.xml
catkin_ws/src/greenball_tracking/launch/: real.launch
catkin_ws/src/greenball_tracking/src/: green_ball_node.cc  joystick_node.cc  joystick_sub.cpp  movement_node.cc  ros_udp.cpp
greenball/: greenball.sh  kill.sh
greenball/devel/: .catkin  .rosinstall  setup.sh
greenball/devel/include/unitree_legged_msgs/: HighState.h
greenball/devel/lib/greenball_tracking/: ball_detector  behavior_tree  example_BT  greenball_tracking  joystick_sub  movement_node  ros_udp
greenball/devel/lib/pkgconfig/: greenball_tracking.pc  unitree_legged_msgs.pc
greenball/devel/share/greenball_tracking/cmake/: greenball_trackingConfig.cmake
greenball/devel/share/unitree_legged_msgs/cmake/: unitree_legged_msgs-msg-extras.cmake  unitree_legged_msgs-msg-paths.cmake  unitree_legged_msgsConfig.cmake
greenball/install/: .rosinstall  setup.sh
greenball/install/include/unitree_legged_msgs/: LowState.h
greenball/install/lib/pkgconfig/: greenball_tracking.pc  unitree_legged_msgs.pc
greenball/install/share/gennodejs/ros/unitree_legged_msgs/msg/: _index.js
greenball/install/share/greenball_tracking/: package.xml
greenball/install/share/greenball_tracking/cmake/: greenball_trackingConfig.cmake
greenball/install/share/roseus/ros/unitree_legged_msgs/: manifest.l
greenball/src/greenball_tracking/: CMakeLists.txt
greenball/src/greenball_tracking/include/: PahoMQTT.hpp  StereoCameraCommon.hpp
greenball/src/greenball_tracking/include/unitree_legged_msgs/: HighCmd.h  IMU.h  LowCmd.h
greenball/src/greenball_tracking/launch/: greenball.launch
greenball/src/greenball_tracking/src/: ball_detector.cpp  behavior_tree.cpp  joystick_sub.cpp
mqtt_programming/: .gitignore  programming.py  programming.sh
